correcting logo alignment - home

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ video {
 
 .brand {
   width: 45%;
+  margin-right: 500px;
   height: auto;
   padding-top: 5px;
 }
